[CAPNHAT] ghilog cho (NV|KH|KM|TK)